--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -40,7 +40,15 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>开发指南</h3>
         <ul class="list-unstyled">
-          <li><a href="start.html">安装</a></li>
+          <li><a href="start.html">SDK 安装</a></li>
+          <li>
+            <span>快速入门</span>
+            <ul class="list-unstyled list-platform">
+              <li><a href="leanstorage-started-android.html">Android</a></li>
+              <li><a href="leanstorage-started-ios.html">Objective-C</a></li>
+              <li><a href="leanstorage-started-js.html">JavaScript</a></li>
+            </ul>
+          </li>
           <li><a href="storage_overview.html">存储服务总览</a></li>
           <li><a href="data_security.html">数据安全详解</a></li>
           <li>
