--- a/views/leanstorage-started.tmpl
+++ b/views/leanstorage-started.tmpl
@@ -1,4 +1,4 @@
-# LeanCloud 数据存储入门教程 &middot; {{platformName}}
+# 数据存储入门教程 &middot; {{platformName}}
 Hi, 亲爱的开发者，欢迎使用 LeanCloud。本教程将模拟一个发布商品的场景，向你讲解 LeanCloud 的数据存储 LeanStorage 的核心使用方法。
 
 ## 你将学到什么
