--- a/views/leanstorage-started.tmpl
+++ b/views/leanstorage-started.tmpl
@@ -99,4 +99,4 @@ image | File | 封面图片
 
 我们在这次的教程中，逐一地去熟悉几个核心的概念：`{{avUserName}}`、`{{avObjectName}}`、`{{avFileName}}`、`Pointer`、`{{avQueryName}}` 和 `include`。在理解了这些基础知识后，就可以开始基于 LeanCloud 的快速开发了。
 
-如果你在后续存储模块的开发过程中，遇到任何问题，请查阅以下进阶文档的相关部分：{{link_to_storage_guide_doc}}。
+如果你在后续存储模块的开发过程中，遇到任何问题，请查阅以下进阶文档的相关部分：{{storage_guide_url}}。
