--- a/views/realtime_guide.tmpl
+++ b/views/realtime_guide.tmpl
@@ -2,7 +2,7 @@
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
 
-# {{platform_name}} 实时通信开发指南
+#  实时通信开发指南 &middot; {{platform_name}}
 
 ## 简介
 
