--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -17,7 +17,7 @@
 {% set ttl = '{{ttl}}' %}
 {% set bill_number = '{{bill_number}}' %}
 
-# {% block language %}{% endblock %} - 短信服务使用指南
+# 短信服务使用指南 &middot; {{platform_name}}
 
 LeanCloud 短信服务支持的应用场景有以下三种：
 
