--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -1,6 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
+
 # 云引擎指南 &middot; {{environment | capitalize}}
 
 {% block updateToLeanEngine %}{% endblock %}
@@ -118,7 +119,7 @@ curl -X POST -H "Content-Type: application/json; charset=utf-8"   \
 
 ### 使用数据存储
 
-你可以直接在云引擎上使用我们的 [数据存储](/features/storage.html) 服务，相关功能请参考 {{ sdk_guide_link }}。
+你可以直接在云引擎上使用我们的 [数据存储](/features/storage.html) 服务，相关功能请参考 {{ storage_guide_url }}。
 
 ## 云函数
 
@@ -148,7 +149,7 @@ curl -X POST -H "Content-Type: application/json; charset=utf-8"   \
 
 `stars` 表示评分，1-5。如果你想查找《夏洛特烦恼》这部电影的平均分，你可以找出这部电影的所有评分，并在设备上根据这个查询结果计算平均分。但是这样一来，尽管你只是需要平均分这样一个数字，却不得不耗费大量的带宽来传输所有的评分。通过云引擎，我们可以简单地传入电影名称，然后返回电影的平均分。
 
-云函数接收 JSON 格式的请求对象，我们可以用它来传入电影名称。整个 {{ sdk_guide_link }} 都在云引擎运行环境上有效，可以直接使用，所以我们可以使用它来查询所有的评分。结合在一起，实现 `averageStars` 函数的代码如下：
+云函数接收 JSON 格式的请求对象，我们可以用它来传入电影名称。整个 {{ storage_guide_url }} 都在云引擎运行环境上有效，可以直接使用，所以我们可以使用它来查询所有的评分。结合在一起，实现 `averageStars` 函数的代码如下：
 
 {% block cloudFuncExample %}{% endblock %}
 
