--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -1,7 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
-# {% block language %}{% endblock %} SDK 安装指南
+# {{platform_name}} SDK 安装指南
 
 ## 获取 SDK
 
