chore: replace OS X with macOS (#1610)
* chore: replace OS X with macOS

iOS/OS X to Objective-C in page title

* change file name suffix "-ios" to "-objc"

* fix missing var name

* update doc titles

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -20,25 +20,25 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">iOS / OS X</a>
+          <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">Objective-C</a>
           <ul class="dropdown-menu">
-            <li><a href="sdk_setup-ios.html">SDK 安装指南</a></li>
-            <li><a href="leanstorage-started-ios.html">数据存储快速入门</a></li>
-            <li><a href="leanstorage_guide-ios.html">数据存储开发指南</a></li>
+            <li><a href="sdk_setup-objc.html">SDK 安装指南</a></li>
+            <li><a href="leanstorage-started-objc.html">数据存储快速入门</a></li>
+            <li><a href="leanstorage_guide-objc.html">数据存储开发指南</a></li>
             <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
-            <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
+            <li><a href="realtime_guide-objc.html">实时通信开发指南</a></li>
+            <li><a href="chatkit-objc.html">ChatKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="relation_guide-ios.html">数据模型设计指南</a></li>
-            <li><a href="acl_guide-ios.html">权限管理使用指南</a></li>
+            <li><a href="relation_guide-objc.html">数据模型设计指南</a></li>
+            <li><a href="acl_guide-objc.html">权限管理使用指南</a></li>
             <li><a href="ios_statistics.html">统计分析开发指南</a></li>
             {% if node!='qcloud' %}
-            <li><a href="sms_guide-ios.html">短信服务使用指南</a></li>
+            <li><a href="sms_guide-objc.html">短信服务使用指南</a></li>
             {% endif %}
             <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
-            <li><a href="ios_os_x_faq.html">FAQ</a></li>
+            <li><a href="ios-macos-faq.html">FAQ</a></li>
             <li><a href="/api-docs/iOS/index.html" target="_blank">SDK API</a></li>
           </ul>
         </li>
