--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -60,7 +60,7 @@
         <li><a href="faq.html#Android_消息接收能不能自定义_Receiver_不弹出通知">Android 消息接收能不能自定义 Receiver 不弹出通知</a></li>
         <li><a href="faq.html#Android_应用进程被杀掉后无法收到推送消息">Android 应用进程被杀掉后无法收到推送消息</a></li>
         <li><a href="ios_push_cert.html#上传证书失败">为何无法上传 iOS 推送证书</a></li>
-        <li><a href="realtime_guide-ios.html#duplicate_message_notification">为何在 iOS 上离线消息重复推送了两次？</a></li>
+        <li><a href="realtime_guide-objc.html#duplicate_message_notification">为何在 iOS 上离线消息重复推送了两次？</a></li>
       </ul>
     </div>
   </div>
@@ -136,16 +136,16 @@
 
   <div class="col-md-3 col-xs-6">
     <div class="link-block">
-      <h2>iOS/OS X SDK</h2>
+      <h2>iOS/macOS SDK</h2>
       <ul>
         <li><a href="faq.html#安装_Cocopods_失败怎么解决">安装 Cocopods 失败怎么解决</a></li>
         <li><a href="faq.html#iOS_项目打包后的大小">iOS 项目打包后体积能否缩小</a></li>
-        <li><a href="ios_os_x_faq.html#为什么不能真机调试">为什么不能真机调试</a></li>
+        <li><a href="ios-macos-faq.html#为什么不能真机调试">为什么不能真机调试</a></li>
         <li><a href="faq.html#编译失败">编译失败</a></li>
         <li><a href="faq.html#Undefined_symbols_for_architecture">Undefined symbols for architecture</a></li>
         <li><a href="faq.html#请求报错">请求报错</a></li>
         <li><a href="faq.html#地理位置查询错误">地理位置查询错误</a></li>
-        <li><a href="leanstorage_guide-ios.html#手机号码登录">如何先验证手机号码再注册</a></li>
+        <li><a href="leanstorage_guide-objc.html#手机号码登录">如何先验证手机号码再注册</a></li>
       </ul>
     </div>
   </div>
