--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -5,10 +5,10 @@
 # 权限管理使用指南 &middot; {{platform_name}} 
 
 ## 其他语言代码示例
-{% if platform_name != 'iOS / OS X' %}* [iOS / OS X](acl_guide-ios.html){% else %}* iOS / OS X{% endif %}
-{% if platform_name != 'Android' %}* [Android](acl_guide-android.html){% else %}* Android{% endif %}
-{% if platform_name != 'JavaScript' %}* [JavaScript](acl_guide-js.html){% else %}* JavaScript{% endif %}
-{% if platform_name != 'Python' %}* [Python](acl_guide-python.html){% else %}* Python{% endif %}
+{% if segment_code != "objc" %}* [Objective-C](acl_guide-objc.html){% else %}* Objective-C{% endif %}
+{% if segment_code != "android" %}* [Android](acl_guide-android.html){% else %}* Android{% endif %}
+{% if segment_code != "js" %}* [JavaScript](acl_guide-js.html){% else %}* JavaScript{% endif %}
+{% if segment_code != "python" %}* [Python](acl_guide-python.html){% else %}* Python{% endif %}
 
 ## 简介
 数据安全在应用开发的任何阶段都应该被重视。因此本文档我们详细介绍了在选择 LeanCloud 作为后端服务之后，如何使用 LeanCloud 提供的安全功能模块为开发者的应用以及数据提供安全保障。
