--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -45,7 +45,7 @@ isHome: true
             <span>快速入门</span>
             <ul class="list-unstyled list-platform">
               <li><a href="leanstorage-started-android.html">Android</a></li>
-              <li><a href="leanstorage-started-ios.html">Objective-C</a></li>
+              <li><a href="leanstorage-started-objc.html">Objective-C</a></li>
               <li><a href="leanstorage-started-js.html">JavaScript</a></li>
             </ul>
           </li>
@@ -55,7 +55,7 @@ isHome: true
             <span>数据存储开发指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="leanstorage_guide-android.html">Android</a></li>
-              <li><a href="leanstorage_guide-ios.html">Objective-C</a></li>
+              <li><a href="leanstorage_guide-objc.html">Objective-C</a></li>
               <li><a href="leanstorage_guide-js.html">JavaScript</a></li>
               <li><a href="leanstorage_guide-python.html">Python</a></li>
               <li><a href="leanstorage_guide-php.html">PHP</a></li>
@@ -69,7 +69,7 @@ isHome: true
             <span>数据模型设计指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="relation_guide-android.html">Android</a></li>
-              <li><a href="relation_guide-ios.html">Objective-C</a></li>
+              <li><a href="relation_guide-objc.html">Objective-C</a></li>
               <li><a href="relation_guide-js.html">JavaScript</a></li>
               <li><a href="relation_guide-python.html">Python</a></li>
             </ul>
@@ -77,7 +77,7 @@ isHome: true
           <li>权限管理使用指南
             <ul class="list-unstyled list-platform">
               <li><a href="acl_guide-android.html">Android</a></li>
-              <li><a href="acl_guide-ios.html">Objective-C</a></li>
+              <li><a href="acl_guide-objc.html">Objective-C</a></li>
               <li><a href="acl_guide-js.html">JavaScript</a></li>
               <li><a href="acl_guide-python.html">Python</a></li>
             </ul>
@@ -188,7 +188,7 @@ isHome: true
             <span>通信基础库开发指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="realtime_guide-android.html">Android</a></li>
-              <li><a href="realtime_guide-ios.html">Objective-C</a></li>
+              <li><a href="realtime_guide-objc.html">Objective-C</a></li>
               <li><a href="realtime_guide-js.html">JavaScript</a></li>
               <li><a href="realtime_guide-dotnet.html">.Net/Unity3D</a></li>
             </ul>
@@ -197,7 +197,7 @@ isHome: true
             <span>UI 库 ChatKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="chatkit-android.html">Android</a></li>
-              <li><a href="chatkit-ios.html">Objective-C</a></li>
+              <li><a href="chatkit-objc.html">Objective-C</a></li>
             </ul>
           </li>
   	  <li>
@@ -290,7 +290,7 @@ isHome: true
               <li><a href="unity_statistics.html">Unity3D</a></li>
             </ul>
           </li>
-          <li><a href="ios_crashreporting_guide.html">iOS/OSX 崩溃报告使用指南</a></li>
+          <li><a href="ios_crashreporting_guide.html">iOS/macOS 崩溃报告使用指南</a></li>
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
@@ -332,7 +332,7 @@ isHome: true
             <span>短信服务使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="sms_guide-android.html">Android</a></li>
-              <li><a href="sms_guide-ios.html">Objective-C</a></li>
+              <li><a href="sms_guide-objc.html">Objective-C</a></li>
               <li><a href="sms_guide-js.html">JavaScript</a></li>
             </ul>
           </li>
