--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -23,7 +23,7 @@
     <div style="display:flex;flex-wrap:wrap;margin-left:-20px">
       <div class="dl-cell">
         <div class="desc">
-          <h2><i class="icon icon-github"></i> Objective-C  </h2>
+          <h2><i class="icon icon-github"></i> Objective-C（开放源码）</h2>
           <p>
             分为 iOS、macOS、watchOS 和 tvOS SDK， <a href="https://github.com/leancloud/objc-sdk/releases">查看所有</a>
           </p>
@@ -36,7 +36,7 @@
       </div>
       <div class="dl-cell">
         <div class="desc">
-          <h2><i class="icon icon-github"></i> JavaScript SDK</h2>
+          <h2><i class="icon icon-github"></i> JavaScript SDK（开放源码）</h2>
           <p>
             根据功能需求选择对应的 SDK
           </p>
@@ -195,17 +195,14 @@
 </div>
 <div class="dl-cell">
 <div class="desc">
-  <h2><i class="icon icon-github"></i> 其他 SDK</h2>
+  <h2><i class="icon icon-github"></i> 其他 SDK（开放源码）</h2>
 </div>
 <ul class="list-unstyled list-inline download-btns">
-  <li><a href="https://github.com/leancloud/python-sdk" class="btn btn-link"> Python SDK</a>
-</li>
-<li><a href="https://github.com/leancloud/php-sdk/" class="btn btn-link"> PHP SDK</a>
-</li>
-<li><a href="https://github.com/leancloud/cpp-sdk" class="btn btn-link"> C++ SDK</a>
-</li>
-<li><a href="https://github.com/leancloud/swift-sdk" class="btn btn-link"> Swift SDK</a>
-</li>
+  <li><a href="https://github.com/leancloud/java-sdk" class="btn btn-link"> Java SDK</a></li>
+  <li><a href="https://github.com/leancloud/python-sdk" class="btn btn-link"> Python SDK</a></li>
+  <li><a href="https://github.com/leancloud/php-sdk/" class="btn btn-link"> PHP SDK</a></li>
+  <li><a href="https://github.com/leancloud/cpp-sdk" class="btn btn-link"> C++ SDK</a></li>
+  <li><a href="https://github.com/leancloud/swift-sdk" class="btn btn-link"> Swift SDK</a></li>
 </ul>
 </div>
 </div>
