--- a/templates/include/qcloudfooter.html
+++ b/templates/include/qcloudfooter.html
@@ -1,5 +1,5 @@
 <!-- footer start -->
-<div class="tc-footer">
+<div class="tc-footer" style="position: relative;">
     <div class="tc-footer-columns">
         <div class="columns">
             <h3>
