--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -739,6 +739,7 @@ Cron 表达式的基本语法为：
 
 可能因为 DNS 生效延迟暂时不可访问，请耐心等待或者尝试刷新 DNS 缓存，如果还没有部署，你看到的应该是一个 404 页面。
 
+{% if node != 'qcloud' %}
 ## 域名备案
 
 **备案之前要求云引擎已经部署，并且网站内容和备案申请的内容一致。仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的企业用户，需要自行完成域名备案工作。**
@@ -750,6 +751,7 @@ Cron 表达式的基本语法为：
 **国内节点绑定独立域名需要有 ICP 备案，只有主域名需要备案，二级子域名不需要备案；如果没有 ICP 备案，请参考 [域名备案](#域名备案)。**
 
 如果需要域名绑定，进入 [应用控制台 > 账号设置 > 域名绑定](/settings.html#/setting/domainbind)，按照步骤填写资料即可。
+{% endif %}
 
 ### 使用框架
 
