chore: various minor fixes (#1629)

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -29,7 +29,7 @@
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-objc.html">实时通信开发指南</a></li>
-            <li><a href="chatkit-objc.html">ChatKit 使用指南</a></li>
+            <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="relation_guide-objc.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-objc.html">权限管理使用指南</a></li>
