--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -197,7 +197,7 @@ isHome: true
             <span>UI 库 ChatKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="chatkit-android.html">Android</a></li>
-              <li><a href="chatkit-objc.html">Objective-C</a></li>
+              <li><a href="chatkit-ios.html">Objective-C</a></li>
             </ul>
           </li>
   	  <li>
