替换导航中的 JS 推送文档链接，指向存储中文档中的推送部分 (#1630)

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -78,7 +78,7 @@
             <li><a href="leanstorage-started-js.html">数据存储快速入门</a></li>
             <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
             <li><a href="weapp.html">微信小程序开发指南</a></li>
-            <li><a href="js_push.html">消息推送开发指南</a></li>
+            <li><a href="leanstorage_guide-js.html#Push_通知">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
             <li><a href="relation_guide-js.html">数据模型设计指南</a></li>
