--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -245,7 +245,7 @@ isHome: true
             <ul class="list-unstyled list-platform">
               <li><a href="android_push_guide.html">Android</a></li>
               <li><a href="ios_push_guide.html">Objective-C</a></li>
-              <li><a href="js_push.html">JavaScript</a></li>
+              <li><a href="leanstorage_guide-js.html#Push_通知">JavaScript</a></li>
             </ul>
           </li>
           <li><a href="android_push_guide.html#混合推送">Android 混合推送使用指南</a></li>
