--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -66,7 +66,7 @@
   </div>
   <!-- .col-md-4 -->
 
-{% if node!='qcloud' %}
+{% if node != 'qcloud' and node != 'us' %}
   <div class="col-md-3 col-xs-6">
     <div class="link-block">
       <h2>短信</h2>
