--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -326,7 +326,7 @@ isHome: true
           <li><a href="realtime_rest_api.html">实时通信 REST API</a></li>
           <li><a href="rest_api.html#Push_通知">消息推送 REST API</a></li>
           <li><a href="rest_api.html#统计数据_API">移动统计 REST API</a></li>
-          {% if node!='qcloud' %}
+          {% if node != 'qcloud' and node != 'us' %}
           <li><a href="rest_sms_api.html">短信验证 REST API</a></li>
           <li>
             <span>短信服务使用指南</span>
