chore(lean-cli): revision 2 (#1649)

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -6,9 +6,13 @@
 
 网站托管是云引擎的一个子模块，允许你用 {{platformName}} 开发一个 Web 程序，提供云函数和 Hook，还可以提供静态文件的托管和自定义的路由、绑定你自己的域名。你可以用它为你的移动应用提供一个介绍和下载页、开发一个管理员控制台或完整的网站，或者运行一些必须在服务器端运行的自定义逻辑。
 
-如果你还不知道如何创建云引擎项目，本地调试并部署到云端，可以先阅读一下 [云引擎快速入门](leanengine_quickstart.html)。
+如果你还不知道如何创建云引擎项目，本地调试并部署到云端，可以先阅读一下 [云引擎快速入门](leanengine_quickstart.html)。其他相关文档包括：
 
-在阅读本文档的同时，你还可以通过 [云引擎服务概览](leanengine_overview.html) 了解云引擎的全部功能、通过 [云引擎命令行工具使用详解](leanengine_cli.html) 了解命令行工具的用法、通过 [LeanCache 使用指南](leancache_guide.html) 了解云引擎提供的内存缓存服务，还可以在 [云引擎项目示例](leanengine_examples.html) 找到一些云引擎的示例项目，遇到问题时可以先检索一下 [云引擎常见问题和解答](leanengine_faq.html)。
+ - [云引擎服务概览](leanengine_overview.html)（全部功能的概述）
+ - [命令行工具使用指南](leanengine_cli.html)
+ - [LeanCache 使用指南](leancache_guide.html)（使用内存缓存服务来提升性能）
+ - [云引擎项目示例](leanengine_examples.html)
+ - [云引擎常见问题和解答](leanengine_faq.html)
 
 这篇文档以 {{platformName}} 为例，但云引擎还支持其他多种语言，你可以选择自己熟悉的技术栈进行开发：
 
