--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -145,7 +145,7 @@ isHome: true
             </ul>
           </li>
           <li><a href="leancache_guide.html">LeanCache 使用指南</a></li>
-          <li><a href="leanengine_cli.html">命令行工具使用详解</a></li>
+          <li><a href="leanengine_cli.html">命令行工具 CLI 使用指南</a></li>
         </ul>
       </div>
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
