fix(push): LeanEngine usage revision (#1652)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -151,10 +151,12 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
-          <li><a href="leanengine_examples.html">几个典型场景下的云引擎项目示例</a></li>
+          <li><a href="push_guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
+
           <li><a href="acl_guide_leanengine.html">在云引擎中使用 ACL</a></li>
           <li><a href="https://blog.leancloud.cn/3437/" target="_blank">在云引擎中使用 WebSocket</a></li>
-          <li><a href="https://forum.leancloud.cn/t/leanengine/8426" target="_blank">来自稀土的云引擎最佳实践之用户系统</a></li>
+          <li><a href="leanengine_examples.html">几个典型场景下的云引擎项目示例</a></li>
+          <li><a href="https://forum.leancloud.cn/t/leanengine/8426" target="_blank">云引擎最佳实践 &middot; 用户系统〖稀土〗</a></li>
           <li><a href="https://blog.leancloud.cn/4133/" target="_blank">使用 New Relic 监控云引擎应用的性能</a></li>
           <li><a href="https://zhuanlan.zhihu.com/p/21399155" target="_blank">快速开发聊天机器人</a></li>
           <li><a href="tutorials.html#打造我的微信客服">打造我的微信客服</a></li>
@@ -204,6 +206,7 @@ isHome: true
             <span>直播＋聊天解决方案 LiveKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="livekit-android.html">Android</a></li>
+              <li><a href="livekit-ios.html">iOS</a></li>
             </ul>
           </li>
         </ul>
@@ -255,6 +258,7 @@ isHome: true
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
+          <li><a href="push_guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
           <li><a href="https://blog.leancloud.cn/5014/" target="_blank">在 Cordova 项目中使用 LeanCloud 推送</a></li>
         </ul>
         <h3>相关阅读</h3>
