--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -186,13 +186,12 @@ body {
       padding: 8px 13px;
       border-top: @table-border;
       border-left: @table-border;
+      border-radius: 0;
     }
 
     th {
       white-space: nowrap;
       background-color: #f7f7f7;
-      border-bottom: @table-border;
-      border-top: none;
     }
 
     td:first-child,
@@ -200,9 +199,23 @@ body {
       border-left: none;
     }
 
+    tr:first-child td, 
+    tr:first-child th {
+      border-top: none;
+    }
+
+    thead~tbody tr:first-child td, 
+    thead~tbody tr:first-child th {
+      border-top: @table-border;
+    }
+
     tr:first-child td:first-child,
     tr:first-child th:first-child {
       border-top-left-radius: @table-inner-radius;
+    }
+
+    thead~tbody tr:first-child td:first-child {
+      border-top-left-radius: 0;
     }
 
     tr:first-child td:last-child,
@@ -210,19 +223,17 @@ body {
       border-top-right-radius: @table-inner-radius;
     }
 
-    thead~tbody tr:first-child td:first-child,
-    tbody~thead tr:first-child th:first-child,
-    thead~tbody tr:first-child td:last-child,
-    thead~tbody tr:first-child th:last-child {
-      border-radius: 0;
+    thead~tbody tr:first-child td:last-child {
+      border-top-right-radius: 0;
     }
 
-    tbody > tr:first-child td {
-      border-top: none!important;
+    tr:last-child th:first-child {
+      border-bottom-left-radius: @table-inner-radius;
     }
-
-    tbody > tr:first-child th {
-      border-bottom: none;
+    
+    tr:last-child td:last-child, 
+    tr:last-child th:last-child {
+      border-bottom-right-radius: @table-inner-radius;
     }
   }
 
