chore: update Nav to include LeanEngine Push docs (#1654)

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -187,7 +187,7 @@
           <li><a href="leanengine_examples.html">云引擎项目示例</a></li>
           <li><a href="leanengine_cli.html">命令行工具 CLI</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
-          <li><a href="acl_guide_leanengine.html">在云引擎中使用 Push 推送服务</a></li>
+          <li><a href="push-guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
           <li><a href="leanengine_faq.html">FAQ</a></li>
           <li><a href="leancache_guide.html">LeanCache 使用指南</a></li>
           </ul>
