--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -151,7 +151,7 @@ isHome: true
       <div class="section-content col-xs-12 col-sm-6 col-md-6">
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
-          <li><a href="push_guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
+          <li><a href="push-guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
 
           <li><a href="acl_guide_leanengine.html">在云引擎中使用 ACL</a></li>
           <li><a href="https://blog.leancloud.cn/3437/" target="_blank">在云引擎中使用 WebSocket</a></li>
@@ -258,7 +258,7 @@ isHome: true
         <h3>最佳实践</h3>
         <ul class="list-unstyled">
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
-          <li><a href="push_guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
+          <li><a href="push-guide-leanengine.html">在云引擎中使用 Push 推送服务</a></li>
           <li><a href="https://blog.leancloud.cn/5014/" target="_blank">在 Cordova 项目中使用 LeanCloud 推送</a></li>
         </ul>
         <h3>相关阅读</h3>
