fix(livekit): Objective-C revision (#1655)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -206,7 +206,7 @@ isHome: true
             <span>直播＋聊天解决方案 LiveKit 使用指南</span>
             <ul class="list-unstyled list-platform">
               <li><a href="livekit-android.html">Android</a></li>
-              <li><a href="livekit-ios.html">iOS</a></li>
+              <li><a href="livekit-ios.html">Objective-C</a></li>
             </ul>
           </li>
         </ul>
