--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -30,6 +30,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-objc.html">实时通信开发指南</a></li>
             <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
+            <li><a href="livekit-ios.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="relation_guide-objc.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-objc.html">权限管理使用指南</a></li>
