fix(docs): [存储] fetchWhenSave 返回已修改属性的最新值，而非所有属性的最新值 (#1663)
* fix(docs): [存储] fetchWhenSave 返回已修改属性的最新值，而非所有属性的最新值

#1661

* remove bad example

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -129,7 +129,7 @@ description     objectId
 
 选项 | 类型 | 说明
 --- | --- | ---
-<code class="text-nowrap">{{saveOptions_fetchWhenSave}}</code> | BOOL | 对象成功保存后，自动返回该对象在云端的最新数据。用途请参考 [更新计数器](#更新计数器)。
+<code class="text-nowrap">{{saveOptions_fetchWhenSave}}</code> | BOOL | 对象成功保存后，自动返回本地**已改动属性**在云端的最新值。用途请参考 [更新计数器](#更新计数器)。
 `{{saveOptions_query}}` | `{{baseQueryClassName}}`  | 当 query 中的条件满足后对象才能成功保存，否则放弃保存，并返回错误码 305。<br/><br/>开发者原本可以通过 `{{baseQueryClassName}}` 和 `{{baseObjectName}}` 分两步来实现这样的逻辑，但如此一来无法保证操作的原子性从而导致并发问题。该选项可以用来判断多用户更新同一对象数据时可能引发的冲突。
 
 <a id="saveoption_query_example" name="saveoption_query_example"></a>【示例】一篇 wiki 文章允许任何人来修改，它的数据表字段有：**content**（wiki 内容）、**version**（版本号）。每当 wiki 内容被更新后，其 version 也需要更新（+1）。用户 A 要修改这篇 wiki，从数据表中取出时其 version 值为 3，当用户 A 完成编辑要保存新内容时，如果数据表中的 version 仍为 3，表明这段时间没有其他用户更新过这篇 wiki，可以放心保存；如果不是 3，开发者可以拒绝掉用户 A 的修改，或执行其他自定义的业务逻辑。
@@ -179,10 +179,6 @@ description     objectId
 {% block code_object_fetch %}{% endblock %}
 
 在更新对象操作后，对象本地的 `{{updatedAtName}}` 字段（最后更新时间）会被刷新，直到下一次 save 或 fetch 操作，`{{updatedAtName}}` 的最新值才会被同步到云端，这样做是为了减少网络流量传输。
-
-如果需要在保存或更新之后让本地数据自动与云端保持一致，可以使用 [保存选项 `{{saveOptions_fetchWhenSave}}`](#保存选项)：
-
-{% block code_object_fetchWhenSave %}{% endblock %}
 
 #### 同步指定属性
 
