更新微信小程序文档 (#1674)
* fix(dev): rollback grunt-connect-proxy to 0.1.10

change dev port to 9000 to share cookie with dashboard

* feat: add weapp-domains config generator

* upgrade weapp.md

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -5,7 +5,6 @@
 <link rel="icon" href="images/tab.ico" type="image/x-icon">
 {% endif %}
 <title>LeanCloud 文档</title>
-<script src="//cdn1.lncld.net/static/js/av-mini-0.5.4.js"></script>
 <!-- build:js custom/js/docs-all.js -->
 <script src="custom/js/lib/jquery.min.js"></script>
 <script src="custom/js/lib/bootstrap.min.js"></script>
@@ -22,6 +21,7 @@
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
+<script src="custom/js/weapp-domains.js"></script>
 <!-- endbuild -->
 
 <script type='text/javascript'>
